tests/error/ptr_match.gw
// [contains] not match found for function
typedef void (test0)()
function void test1(int i){}
test1 @=> test0;
